--- a/src/components/filter_style.scss
+++ b/src/components/filter_style.scss
@@ -5,7 +5,7 @@
     border-top: solid 2px silver;
     width: 692px;
     margin-left: 75px;
-    
+    /*Поправить внешний вид и адаптацию*/
 }
 .filter__item{
     padding-top: 16px;
